전적 상세보기화면 구현(미완성)