@@ -15,11 +15,14 @@ group = 'org.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
-//java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(17)
-//    }
-//}
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.removeAll { it == "--enable-preview" }
+}
+
 
 repositories {
     mavenCentral()
